# LLMP

./: .env.example  README.md  docker-compose.yml  readme.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py
backend/app/api/: anki.py  offsets.py  songs.py
backend/app/services/: anki.py  deepl_client.py  dictionary.py  ingestion.py  lang_detect.py  lrclib.py  nlp_ru.py  offsets.py  rate_limit.py  translit.py  youtube.py
backend/app/services/nlp/: __init__.py  ja.py  ru.py  types.py
backend/app/services/translit/: __init__.py  ja.py  ru.py
backend/llmp_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: build_dictionary.py  migrate_v2_language.py
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AnkiExportPanel.tsx  LyricLine.tsx  LyricsView.tsx  SyncControls.tsx  TokenTooltip.tsx  WordToken.tsx  YouTubePlayer.tsx
frontend/src/hooks/: useFontScale.ts  useKeyboardShortcuts.ts  useLocalOffset.ts  usePlaybackSync.ts  useRomajiToggle.ts
frontend/src/pages/: Library.tsx  Player.tsx  Search.tsx
frontend/src/types/: window.d.ts
