[project]
name = "llmp-backend"
version = "0.1.0"
description = "LLMP — Language-Learning Music Player (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "pymorphy3>=2.0",
    "pymorphy3-dicts-ru>=2.4",
    "razdel>=0.5",
    "transliterate>=1.10",
    "sudachipy>=0.6",
    "sudachidict_full>=20240916",
    "pykakasi>=2.2",
    "deepl>=1.18",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "app",
    "app.api",
    "app.services",
    "app.services.nlp",
    "app.services.translit",
    "scripts",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# B008: FastAPI's Depends()/Query() idiomatically lives in argument defaults.
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
